tests/fail-global_initialization2.art
int x = "soul"; // error

int main()
{
	printi(x);
	printc('\n');

	x = 2;

	printi(x);
	printc('\n');
}
